# VERIFI

./: .gitignore  CODING_STYLE.md  CONTRIBUTING.md  LICENSE  README.md  angular.json  dev-app-update.yml  embedded.provisionprofile  forge.config.js  karma.conf.js  main.js  notarize.js  package-lock.json  package.json  preload.js  tsconfig.json  tslint.json
.github/workflows/: add-issue-to-project.yml  electron.yml  main.yml  release_desktop.yml  release_qa.yml  release_web.yml  template_build.yml  template_deploy.yml  web.yml
docs/algorithm-documentation/: README.md  analysis-calculations.md  better-plants-calculations.md  calanderization.md  carbon-calculations.md  conversions.md  dashboard-calculations.md  performance-report-calculations.md  savings-report-calculations.md  shared-calculations.md
e2e/src/: app.e2e-spec.ts
electron/: main.js
src/: contenttabs.css  index.html  popovers.css  proxy.conf.json  styles.css
src/app/: animations.ts  app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  callback.pipe.ts  noaa.service.spec.ts  noaa.service.ts
src/environments/: environment.dev-srv.ts  environment.prod.ts  environment.ts
src/styles/: alerts.css  (+30 more)
wasm/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
wasm/bindings/: AnalysisSummaryWASM.cpp  MonthlyAnalysisSummaryWASM.cpp
wasm/include/: AnalysisDate.h  AnalysisGroup.h  AnnualAnalysisSummary.h  AnnualAnalysisSummaryData.h  CalanderizedMeter.h  Facility.h  Helper.h  MonthlyAccountAnalysis.h  MonthlyAccountAnalysisData.h  MonthlyAnalysisCalculatedValues.h  MonthlyAnalysisSummary.h  MonthlyAnalysisSummaryData.h  MonthlyData.h  MonthlyFacilityAnalysis.h  MonthlyFacilityAnalysisData.h  MonthlyGroupAnalysis.h  PredictorEntry.h
wasm/src/: AnnualAnalysisSummary.cpp  AnnualAnalysisSummaryData.cpp  MonthlyAccountAnalysis.cpp  MonthlyAccountAnalysisData.cpp  MonthlyAnalysisCalculatedValues.cpp  MonthlyAnalysisSummary.cpp  MonthlyAnalysisSummaryData.cpp  MonthlyFacilityAnalysis.cpp  MonthlyFacilityAnalysisData.cpp  MonthlyGroupAnalysis.cpp
(+4528 files in other folders)
